--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
 	},
 	"type": "module",
 	"dependencies": {
-		"animejs": "^3.2.1"
+		"animejs": "^3.2.1",
+		"snipcart": "^0.0.1",
+		"stripe": "^12.1.1"
 	}
 }
